# strandsagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: agent.py  main.py  routes.py  schemas.py  tools.py
app/session/: postgres_session_manager.py  schema.sql
tests/: test_tools.py
